# supports-color-python

./: README.md  pyproject.toml  setup.py
supports_color/: __init__.py
tests/: test_supports_color.py
